2003-07-25  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b53_ML10-b8

	* REALLY fixed bug where config wizard couldn't handle locales with '.'

2003-07-25  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b53_ML10-b7

	* fixed bug where config wizard couldn't handle locales with '.'

2003-07-24  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b53_ML10-b6
	
	* Swapped the order of photo printers, so the usurian
	  Shutterfly aren't number 1.
	* Tidy up phrasing 
	* now choose all all languages be default.


2003-07-24  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b53_ML10-b5

	* first possible release candidate.  Needs much more testing, and 
	  refinement of translation strings.

2003-07-18  Joan McGalliard <gallery@joanhenge.plus.com> ????

	* fixed bug where window wouldn't close in IE

2003-07-10  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b53_ML10

	* First checkin of Jens' ML code.  Straight from his released sources.

2003-07-08  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b53

        * Make the extension lowercase to catch file extensions like .JPG or
          .JPEG (Thanks again Vallimar).
        
2003-07-08  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b52

        * Check to see if the image is a JPEG before attempting to use jpegtran
          on it.  (Thanks for the catch, Vallimar).

2003-07-08  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b51
	
	* slight rework of b50

2003-07-08  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b50
	
	* fixed bug.  Correct image size with resized images in custom
	  fields

2003-07-08  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b49

	* use "round" instead of "ceil" for image size

2003-07-08  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b48

	* added "Image Size" as custom field.  Tidied up formatting and translation

2003-07-08  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b47
