@@ -1,3 +1,7 @@
+2003-07-25  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b53_ML10-b9
+
+	*remembers language from one page to the next
+
 2003-07-25  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b53_ML10-b8
 
 	* REALLY fixed bug where config wizard couldn't handle locales with '.'
